sudoku.css
/* Some CSS resets */
*,
*::before,
*::after {
  box-sizing: border-box;
}
* {
  margin: 0;
}
img,
picture,
video,
canvas,
svg {
  display: block;
  max-width: 100%;
}
/* End of CSS resets */

@page {
  size: A4 portrait;
}

@media print {
  #sudoku-grid {
    max-width: 100vw;
    max-height: 100vw;
  }
  #new-puzzle {
    display: none;
  }
  .link {
    display: none;
  }
}

#sudoku-grid {
  table-layout: fixed;
  width: 100vw;
  max-width: 600px;
  height: 100vw;
  max-height: 600px;
  border-collapse: collapse;
  /* border: 2px solid rgb(0, 0, 0); */
  margin: 20px auto;
}

#sudoku-grid .clue {
  display: block;
  width: 100%;
  height: auto;
  image-rendering: pixelated;
}

#sudoku-grid .cell {
  width: 30px;
  height: 30px;
  padding: 10px;
  border: 2px solid #ccc;
}

#sudoku-grid .cell:nth-child(3n) {
  border-right: 2px solid rgb(0, 0, 0);
}
#sudoku-grid .row:nth-child(2n) .cell {
  border-bottom: 2px solid rgb(0, 0, 0);
}

#sudoku-grid .row .cell:last-child {
  border-right: 2px solid rgb(0, 0, 0);
}
#sudoku-grid .row .cell:first-child {
  border-left: 2px solid rgb(0, 0, 0);
}
#sudoku-grid .row:first-child .cell {
  border-top: 2px solid rgb(0, 0, 0);
}
#sudoku-grid .row:last-child .cell {
  border-bottom: 2px solid rgb(0, 0, 0);
}

#new-puzzle {
  display: block;
  margin: 20px auto;
}

.link {
  display: block;
  margin: 20px auto;
  text-align: center;
}

